# MXLogger

./: LICENSE.TXT  MXLogger.podspec  MXLoggerCore.podspec  README.md  README_CN.md  log_msg.fbs  mxlogger.sh  mxlogger_core.sh
Android/: .gitignore  build.gradle  publish.gradle  settings.gradle
Android/BlingLogger/: settings.gradle
Android/BlingLogger/blinglogger/: CMakeLists.txt  build.gradle
Android/BlingLogger/blinglogger/src/androidTest/java/com/blingabc/blinglogger/: ExampleInstrumentedTest.java
Android/BlingLogger/blinglogger/src/main/: AndroidManifest.xml
Android/BlingLogger/blinglogger/src/main/cpp/: CMakeLists.txt  blinglogger.cpp  navtive-bridge.cpp
Android/BlingLogger/blinglogger/src/main/java/com/blingabc/blinglogger/: BlingLogger.java  NativeLib.java
Android/BlingLogger/blinglogger/src/test/java/com/blingabc/blinglogger/: ExampleUnitTest.java
Android/MXLogger/: CMakeLists.txt  build.gradle  gradle.properties  publish.gradle  publish2.gradle  release.sh  secring3.gpg  settings.gradle
Android/MXLogger/mxlogger/: CMakeLists.txt  README.md  build.gradle  proguard-rules.pro  secring.gpg
Android/MXLogger/mxlogger/src/androidTest/java/com/dongjiayi/mxlogger/: ExampleInstrumentedTest.java
Android/MXLogger/mxlogger/src/main/cpp/: flutter-bridge.cpp  mxlogger.cpp  navtive-bridge.cpp
Android/MXLogger/mxlogger/src/main/java/com/dongjiayi/mxlogger/: MXLogger.java  MXStoragePolicyType.java  NativeLib.java
Android/mxloggerdemo/: build.gradle
Android/test/: settings.gradle
Core/: CMakeLists.txt  async_logger.cpp  async_logger.hpp  async_msg.cpp  async_msg.hpp  build.sh  console_sink.cc  console_sink.cpp  console_sink.h  console_sink.hpp  constructor_json.cpp  constructor_json.hpp  debug_log.cpp  debug_log.hpp  file_appender.cpp  file_appender.hpp  file_helper.cpp  file_helper.hpp  file_sink.cpp  file_sink.hpp  flag_formatter.cpp  flag_formatter.hpp  fmt_helper.h  formatter.cpp  formatter.hpp  log_enum.h  log_msg.cc  log_msg.cpp  log_msg.h  log_msg.hpp  log_msg_buffer.cpp  log_msg_buffer.hpp  log_serialize.h  logger.cpp  logger.hpp  logger_common.h  logger_manager.cpp  logger_os.cpp  logger_os.hpp  memory_mmap.cpp  (+21 more)
Core/MXLoggerCore.xcodeproj/: project.pbxproj
Core/MXLoggerCore.xcodeproj/project.xcworkspace/xcuserdata/dongjiayi.xcuserdatad/: UserInterfaceState.xcuserstate
Core/MXLoggerCore.xcodeproj/xcuserdata/dongjiayi.xcuserdatad/xcschemes/: xcschememanagement.plist
Core/aes/: aes_crypt.c  aes_crypt.cpp  aes_crypt.h  aes_crypt.hpp
Core/aes/openssl/: openssl_aes.h  openssl_aes_core.cpp  openssl_aes_locl.h  openssl_aesv8-armx.S  openssl_cfb128.cpp
Core/build-ios/: CMakeCache.txt  cmake_install.cmake
Core/build-ios/BlingLoggerCore.build/Debug-iphoneos/BlingLoggerCore.build/Objects-normal/arm64/: BlingLoggerCore.LinkFileList  file_appender.d
Core/build-ios/BlingLoggerCore.build/Debug-iphoneos/BlingLoggerCore.build/Objects-normal/x86_64/: BlingLoggerCore.LinkFileList  os.d  os.dia
Core/build-ios/BlingLoggerCore.build/Debug-iphoneos/ZERO_CHECK.build/: Script-BB1A10055C02A7797D922160.sh
Core/build-ios/BlingLoggerCore.build/Debug-iphonesimulator/BlingLoggerCore.build/Objects-normal/arm64/: BlingLoggerCore.LinkFileList  logger.d  logger_os.d
Core/build-ios/BlingLoggerCore.build/Debug/BlingLoggerCore.build/Objects-normal/arm64/: BlingLoggerCore.LinkFileList  flag_formatter.d
Core/build-ios/BlingLoggerCore.build/Debug/BlingLoggerCore.build/Objects-normal/x86_64/: BlingLoggerCore.LinkFileList  console_sink.d  file_helper.d  file_sink.d  mpmc_blocking_queue.d
Core/build-ios/BlingLoggerCore.xcodeproj/: project.pbxproj
Core/build-ios/BlingLoggerCore.xcodeproj/project.xcworkspace/xcuserdata/dongjiayi.xcuserdatad/: UserInterfaceState.xcuserstate
Core/build-ios/BlingLoggerCore.xcodeproj/xcuserdata/dongjiayi.xcuserdatad/xcschemes/: xcschememanagement.plist
Core/build-ios/CMakeScripts/: ReRunCMake.make
Core/build-ios/Debug-iphoneos/include/MXLoggerCore/: mxlogger_manager.hpp
Core/build-ios/Debug-iphonesimulator/include/BlingLoggerCore/: logger_enum.h  logger_manager.hpp
Core/build-ios/MXLoggerCore.build/Debug-iphoneos/ALL_BUILD.build/: Script-53F7C39B0002AF0931DCC6A2.sh
Core/build-ios/MXLoggerCore.build/Debug-iphoneos/MXLoggerCore.build/Objects-normal/arm64/: MXLoggerCore.LinkFileList  async_logger.d  async_msg.d  format.d  formatter.d  log_msg.d  log_msg_buffer.d  logger_manager.d  mxlogger_manager.d  os.d  pattern_formatter.d  sinks.d  thread_pool.d
Core/build-ios/MXLoggerCore.xcodeproj/: project.pbxproj
Core/build-ios/MXLoggerCore.xcodeproj/project.xcworkspace/xcuserdata/dongjiayi.xcuserdatad/: UserInterfaceState.xcuserstate
Core/build-ios/MXLoggerCore.xcodeproj/xcuserdata/dongjiayi.xcuserdatad/xcschemes/: xcschememanagement.plist
Core/flatbuffers/: base.h  flatbuffers.h  registry.h  util.cpp
Core/fmt/: format.cc  format.h  locale.h  os.cc  os.h
Core/md5/: md5.c  md5.h
Core/sink/: base_file_sink.cpp  base_file_sink.hpp  console_sink.cpp  console_sink.hpp  file_sink.cpp  file_sink.hpp  mmap_sink.cpp  mmap_sink.hpp  sink.cpp  sink.hpp  windows_sink.cpp  windows_sink.hpp
flutter_mxlogger/: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
flutter_mxlogger/android/: build.gradle
flutter_mxlogger/example/: .gitignore  .metadata  README.md  pubspec.yaml
flutter_mxlogger/ios/: flutter_mxlogger.podspec
flutter_mxlogger/lib/: flutter_mxlogger.dart
flutter_mxlogger/test/: flutter_mxlogger_test.dart
iOS/: flutter_mxlogger.podspec
iOS/Classes/: FlutterMxloggerPlugin.m
mxlogger_analyzer/: .metadata  README.md  pubspec.yaml
mxlogger_analyzer/lib/: analyzer_binary.dart  analyzer_database.dart  log_serialize.dart  main.dart  main2.dart  main_desktop.dart  main_package.dart
mxlogger_analyzer/linux/: CMakeLists.txt  my_application.cc
mxlogger_analyzer/mxlogger_analyzer_lib/: .metadata  CHANGELOG.md  LICENSE  README.md  pub.sh  pubspec.yaml
mxlogger_analyzer/test/: widget_test.dart
mxlogger_analyzer/web/: index.html  manifest.json
mxlogger_analyzer/windows/: CMakeLists.txt
(+315 files in other folders)
